feat(screen-login): added language support for login and register screens

--- a/client/src/constants/localization/en.json
+++ b/client/src/constants/localization/en.json
@@ -1,4 +1,48 @@
 {
-  "title": "hello",
-  "languageTitle": "Language"
+  "global.username": "Username",
+  "global.password": "Password",
+  "global.email": "Email",
+  "global.fullName": "Full Name",
+  "global.newPassword": "New Password",
+  "global.confirmPassword": "Confirm Password",
+  "global.gender": "Gender",
+  "global.male": "Male",
+  "global.female": "Female",
+  "global.login": "Login",
+  "global.register": "Register",
+  "global.send": "Send",
+  "global.ok": "OK",
+
+  "alert.success": "Success",
+  "alert.error": "Error",
+  "alert.fillAllFields": "Please fill all fields.",
+  "alert.passwordsDoNotMatch": "Passwords do not match.",
+  "alert.invalidEmail": "Invalid email address.",
+  "alert.passwordLength": "Password must be at least {{length}} characters long.",
+  "alert.incorrectUsernameOrPassword": "Incorrect username or password.",
+  "alert.userNotFound": "User not found. Please check your username and email.",
+  "alert.invalidVerificationCode": "Invalid verification code.",
+  "alert.usernameExists": "Username already exists.",
+  "alert.passwordResetSuccess": "Password reset successfully.",
+
+  "login.header": "Welcome",
+  "login.subHeader": "Please enter your information to log in.",
+  "login.forgotPassword": "Forgot Password?",
+  "login.dontHaveAccount": "Don't have an account?",
+  "login.register": "Register",
+
+  "register.header": "Register",
+  "register.subHeader": "Please enter your information to register.",
+  "register.alreadyHaveAnAccount": "Already have an account?",
+  "register.modal.header": "Register Success",
+  "register.modal.subHeader": "Your registration was completed successfully!",
+
+  "forgotPassword.header": "Forgot Password",
+  "forgotPassword.subHeader": "Enter your username and email to receive a verification code.",
+  "forgotPassword.validationHeader": "Verification Code",
+  "forgotPassword.timeRemaining": "Time Remaining",
+  "forgotPassword.verifyButton": "Verify Code",
+  "forgotPassword.resetPasswordHeader": "Reset Password",
+  "forgotPassword.resetPasswordSubHeader": "Please enter your new password to reset your password.",
+  "forgotPassword.resetPasswordButton": "Reset Password"
 }
