--- a/client/src/constants/localization/tr.json
+++ b/client/src/constants/localization/tr.json
@@ -1,4 +1,48 @@
 {
-  "title": "merhaba",
-  "languageTitle": "Dil"
+  "global.username": "Kullanıcı Adı",
+  "global.password": "Şifre",
+  "global.email": "E-Posta",
+  "global.fullName": "Ad Soyad",
+  "global.newPassword": "Yeni Şifre",
+  "global.confirmPassword": "Şifreyi Onayla",
+  "global.gender": "Cinsiyet",
+  "global.male": "Erkek",
+  "global.female": "Kadın",
+  "global.login": "Giriş Yap",
+  "global.register": "Kayıt Ol",
+  "global.send": "Gönder",
+  "global.ok": "Tamam",
+
+  "alert.success": "Başarılı",
+  "alert.error": "Hata",
+  "alert.fillAllFields": "Lütfen tüm alanları doldurunuz.",
+  "alert.passwordsDoNotMatch": "Parolalar uyuşmuyor.",
+  "alert.invalidEmail": "Geçersiz e-posta adresi.",
+  "alert.passwordLength": "Şifre en az {{length}} karakter uzunluğunda olmalı.",
+  "alert.incorrectUsernameOrPassword": "Kullanıcı adı veya şifre yanlış.",
+  "alert.userNotFound": "Kullanıcı bulunamadı. Lütfen kullanıcı adınızı ve e-posta adresinizi kontrol edin.",
+  "alert.invalidVerificationCode": "Geçersiz doğrulama kodu.",
+  "alert.usernameExists": "Bu kullanıcı adı zaten kullanımda.",
+  "alert.passwordResetSuccess": "Şifreniz başarıyla sıfırlandı.",
+
+  "login.header": "Hoşgeldiniz",
+  "login.subHeader": "Lütfen giriş yapmak için bilgilerinizi giriniz.",
+  "login.forgotPassword": "Şifremi Unuttum?",
+  "login.login": "Giriş Yap",
+  "login.dontHaveAccount": "Hesabınız yok mu?",
+
+  "register.header": "Kayıt Ol",
+  "register.subHeader": "Lütfen bilgilerinizi giriniz.",
+  "register.alreadyHaveAnAccount": "Zaten hesabınız var mı?",
+  "register.modal.header": "Kayıt Başarılı",
+  "register.modal.subHeader": "Kaydınız başarıyla tamamlandı!",
+
+  "forgotPassword.header": "Şifremi Unuttum",
+  "forgotPassword.subHeader": "Doğrulama kodunu almak için kullanıcı adınızı ve e-posta adresinizi girin.",
+  "forgotPassword.validationHeader": "Doğrulama Kodu",
+  "forgotPassword.timeRemaining": "Kalan Süre",
+  "forgotPassword.verifyButton": "Kodu Doğrula",
+  "forgotPassword.resetPasswordHeader": "Şifre Sıfırla",
+  "forgotPassword.resetPasswordSubHeader": "Şifrenizi sıfırlamak için lütfen yeni şifrenizi giriniz.",
+  "forgotPassword.resetPasswordButton": "Şifreyi Sıfırla"
 }
