--- a/client/src/constants/localization/en.json
+++ b/client/src/constants/localization/en.json
@@ -21,6 +21,16 @@
   "global.addFriend": "Add Friend",
   "global.createdAt": "Created At",
   "global.friendCount": "Friend Count",
+  "global.member": "Member",
+  "global.members": "Members",
+  "global.add": "Add",
+  "global.remove": "Remove",
+  "global.noFriends": "No friends found",
+  "global.leave": "Leave",
+  "global.save": "Save",
+  "global.message": "Message",
+  "global.view": "View",
+  "global.select": "Select",
 
   "alert.success": "Success",
   "alert.error": "Error",
@@ -33,6 +43,10 @@
   "alert.invalidVerificationCode": "Invalid verification code.",
   "alert.usernameExists": "Username already exists.",
   "alert.passwordResetSuccess": "Password reset successfully.",
+
+  "toast.enterGroupName": "Please enter group name.",
+  "toast.selectMembers": "Please select friends to add to the group.",
+  "toast.memberAdded": "Members added successfully.",
 
   "login.header": "Welcome",
   "login.subHeader": "Please enter your information to log in.",
@@ -63,5 +77,17 @@
 
   "discover.discover.header": "Discover",
   "discover.discover.message": "You can discover new people here and connect with them",
-  "discover.requestBoxBottomSheet.noRequest": "You have no friend requests at the moment😊"
+  "discover.requestBoxBottomSheet.noRequest": "You have no friend requests at the moment😊",
+
+  "group.group.header": "Groups",
+  "group.createGroupBottomSheet.header": "New Group",
+  "group.createGroupBottomSheet.placeholder": "Enter group name",
+  "group.createGroupBottomSheet.selectMembers": "Select Members",
+  "group.createGroupBottomSheet.createGroup": "Create Group",
+  "group.groupInfo.groupName": "Group Name",
+  "group.groupInfo.groupDescription": "Group Description",
+  "group.groupInfo.owner": "Group Admin",
+  "group.groupInfo.addMembers": "Add Members",
+  "group.groupMemberDetailModal.makeAdmin": "Make Admin",
+  "group.addMembersBottomSheet.header": "Add Members to Group"
 }
