--- a/client/src/constants/localization/tr.json
+++ b/client/src/constants/localization/tr.json
@@ -21,6 +21,16 @@
   "global.addFriend": "Arkadaş Ekle",
   "global.createdAt": "Oluşturulma Tarihi",
   "global.friendCount": "Arkadaş Sayısı",
+  "global.member": "Üye",
+  "global.members": "Üye",
+  "global.add": "Ekle",
+  "global.remove": "Kaldır",
+  "global.noFriends": "Arkadaşın Yok",
+  "global.leave": "Ayrıl",
+  "global.save": "Kaydet",
+  "global.message": "Mesaj Gönder",
+  "global.view": "Görüntüle",
+  "global.select": "Seç",
 
   "alert.success": "Başarılı",
   "alert.error": "Hata",
@@ -33,6 +43,10 @@
   "alert.invalidVerificationCode": "Geçersiz doğrulama kodu.",
   "alert.usernameExists": "Bu kullanıcı adı zaten kullanımda.",
   "alert.passwordResetSuccess": "Şifreniz başarıyla sıfırlandı.",
+
+  "toast.enterGroupName": "Lütfen grup adını giriniz.",
+  "toast.selectMembers": "Lütfen en az bir üye seçiniz.",
+  "toast.memberAdded": "Üyeler eklendi.",
 
   "login.header": "Hoşgeldiniz",
   "login.subHeader": "Lütfen giriş yapmak için bilgilerinizi giriniz.",
@@ -63,5 +77,17 @@
 
   "discover.discover.header": "Keşfet",
   "discover.discover.message": "Burada yeni insanlar keşfedebilir ve onlarla bağlantı kurabilirsiniz",
-  "discover.requestBoxBottomSheet.noRequest": "Şu anda hiç arkadaşlık isteğin yok 😊"
+  "discover.requestBoxBottomSheet.noRequest": "Şu anda hiç arkadaşlık isteğin yok 😊",
+
+  "group.group.header": "Gruplar",
+  "group.createGroupBottomSheet.header": "Yeni Grup",
+  "group.createGroupBottomSheet.placeholder": "Grup Adı",
+  "group.createGroupBottomSheet.selectMembers": "Üyeleri Seç",
+  "group.createGroupBottomSheet.createGroup": "Grup Oluştur",
+  "group.groupInfo.groupName": "Grup Adı",
+  "group.groupInfo.groupDescription": "Grup Açıklaması",
+  "group.groupInfo.owner": "Grup Yöneticisi",
+  "group.groupInfo.addMembers": "Üye Ekle",
+  "group.groupMemberDetailModal.makeAdmin": "Yönetici Yap",
+  "group.addMembersBottomSheet.header": "Gruba Üye Ekle"
 }
