feat(screen-setting): added language support for setting, profile screens and components

--- a/client/src/constants/localization/en.json
+++ b/client/src/constants/localization/en.json
@@ -3,6 +3,7 @@
   "global.password": "Password",
   "global.email": "Email",
   "global.fullName": "Full Name",
+  "global.about": "About",
   "global.newPassword": "New Password",
   "global.confirmPassword": "Confirm Password",
   "global.gender": "Gender",
@@ -31,6 +32,16 @@
   "global.message": "Message",
   "global.view": "View",
   "global.select": "Select",
+  "global.back": "Back",
+  "global.gallery": "Gallery",
+  "global.camera": "Camera",
+  "global.turkish": "Turkish",
+  "global.english": "English",
+  "global.light": "Light",
+  "global.dark": "Dark",
+  "global.confirm": "Confirm",
+  "global.yes": "Yes",
+  "global.no": "No",
 
   "alert.success": "Success",
   "alert.error": "Error",
@@ -89,5 +100,40 @@
   "group.groupInfo.owner": "Group Admin",
   "group.groupInfo.addMembers": "Add Members",
   "group.groupMemberDetailModal.makeAdmin": "Make Admin",
-  "group.addMembersBottomSheet.header": "Add Members to Group"
+  "group.addMembersBottomSheet.header": "Add Members to Group",
+
+  "settings.settings.header": "Settings",
+  "settings.list.language": "Language",
+  "settings.list.theme": "Theme",
+  "settings.list.chats": "Chats",
+  "settings.list.privacy": "Privacy",
+  "settings.list.help": "Help",
+  "settings.list.aboutus": "About Us",
+  "settings.list.logout": "Logout",
+  "settings.profilePhotoBottomSheet.header": "Profile Photo",
+  "settings.languageBottomSheet.header": "Choose your language",
+  "settings.themeBottomSheet.header": "Choose your theme",
+  "settings.chatsBottomSheet.header": "Chat Settings",
+  "settings.chatsBottomSheet.FontSize": "Font Size",
+  "settings.chatsBottomSheet.Small": "Small",
+  "settings.chatsBottomSheet.Medium": "Medium",
+  "settings.chatsBottomSheet.Large": "Large",
+  "settings.chatsBottomSheet.WallpaperColor": "Wallpaper Color",
+  "settings.chatsBottomSheet.ClearChatHistory": "Clear Chat History",
+  "settings.chatsBottomSheet.ClearChatHistoryModal.header": "Are you sure you want to clear chat history?",
+  "settings.privacyBottomSheet.header": "Privacy Settings",
+  "settings.privacyBottomSheet.content1": "Online Status Hide",
+  "settings.privacyBottomSheet.content2": "Profile Picture Hide",
+  "settings.privacyBottomSheet.content3": "About Hide",
+  "settings.privacyBottomSheet.content4": "Last Seen",
+  "settings.helpBottomSheet.header": "How can we help you?",
+  "settings.helpBottomSheet.placeholder": "Search Help Center",
+  "settings.helpBottomSheet.FAQ": "Help FAQ",
+  "settings.helpBottomSheet.noQuestionFound": "No question found.",
+  "settings.helpBottomSheet.question1": "How to create a new account?",
+  "settings.helpBottomSheet.question2": "How to reset password?",
+  "settings.helpBottomSheet.question3": "How to contact support?",
+  "settings.helpBottomSheet.question4": "How to delete account?",
+  "settings.helpBottomSheet.question5": "How to report a bug?",
+  "settings.aboutus.message": "Chatirdek is a social media platform that allows users to communicate with each other. Chatirdek allows users to message each other, send friend requests and create groups."
 }
