--- a/client/src/constants/localization/tr.json
+++ b/client/src/constants/localization/tr.json
@@ -3,6 +3,7 @@
   "global.password": "Şifre",
   "global.email": "E-Posta",
   "global.fullName": "Ad Soyad",
+  "global.about": "Hakkında",
   "global.newPassword": "Yeni Şifre",
   "global.confirmPassword": "Şifreyi Onayla",
   "global.gender": "Cinsiyet",
@@ -31,6 +32,16 @@
   "global.message": "Mesaj Gönder",
   "global.view": "Görüntüle",
   "global.select": "Seç",
+  "global.back": "Geri",
+  "global.gallery": "Galeri",
+  "global.camera": "Kamera",
+  "global.turkish": "Türkçe",
+  "global.english": "İngilizce",
+  "global.light": "Açık",
+  "global.dark": "Koyu",
+  "global.confirm": "Onayla",
+  "global.yes": "Evet",
+  "global.no": "Hayır",
 
   "alert.success": "Başarılı",
   "alert.error": "Hata",
@@ -89,5 +100,40 @@
   "group.groupInfo.owner": "Grup Yöneticisi",
   "group.groupInfo.addMembers": "Üye Ekle",
   "group.groupMemberDetailModal.makeAdmin": "Yönetici Yap",
-  "group.addMembersBottomSheet.header": "Gruba Üye Ekle"
+  "group.addMembersBottomSheet.header": "Gruba Üye Ekle",
+
+  "settings.settings.header": "Ayarlar",
+  "settings.list.language": "Dil",
+  "settings.list.theme": "Tema",
+  "settings.list.chats": "Sohbetler",
+  "settings.list.privacy": "Gizlilik",
+  "settings.list.help": "Yardım",
+  "settings.list.aboutus": "Hakkımızda",
+  "settings.list.logout": "Çıkış Yap",
+  "settings.profilePhotoBottomSheet.header": "Profil Fotoğrafı",
+  "settings.languageBottomSheet.header": "Dil Seçimi",
+  "settings.themeBottomSheet.header": "Tema Seçimi",
+  "settings.chatsBottomSheet.header": "Sohbet Ayarları",
+  "settings.chatsBottomSheet.FontSize": "Font Boyutu",
+  "settings.chatsBottomSheet.Small": "Küçük",
+  "settings.chatsBottomSheet.Medium": "Orta",
+  "settings.chatsBottomSheet.Large": "Büyük",
+  "settings.chatsBottomSheet.WallpaperColor": "Duvar Kağıdı Rengi",
+  "settings.chatsBottomSheet.ClearChatHistory": "Sohbet Geçmişini Temizle",
+  "settings.chatsBottomSheet.ClearChatHistoryModal.header": "Sohbet geçmişini temizlemek istediğinizden emin misiniz?",
+  "settings.privacyBottomSheet.header": "Gizlilik Ayarları",
+  "settings.privacyBottomSheet.content1": "Çevrimiçi Durumu Gizle",
+  "settings.privacyBottomSheet.content2": "Profil Resmini Gizle",
+  "settings.privacyBottomSheet.content3": "Hakkımdayı Gizle",
+  "settings.privacyBottomSheet.content4": "Son Görülmeyi Gizle",
+  "settings.helpBottomSheet.header": "Nasıl yardım edebiliriz?",
+  "settings.helpBottomSheet.placeholder": "Yardım Merkezinde Ara",
+  "settings.helpBottomSheet.FAQ": "Sıkça Sorulan Sorular",
+  "settings.helpBottomSheet.noQuestionFound": "Üzgünüz, aradığınız soru bulunamadı.",
+  "settings.helpBottomSheet.question1": "Yeni bir hesap nasıl oluşturulur?",
+  "settings.helpBottomSheet.question2": "Şifre nasıl sıfırlanır?",
+  "settings.helpBottomSheet.question3": "Destekle nasıl iletişime geçilir?",
+  "settings.helpBottomSheet.question4": "Hesap nasıl silinir?",
+  "settings.helpBottomSheet.question5": "Bir hata nasıl bildirilir?",
+  "settings.aboutus.message": "Chatirdek, kullanıcıların birbirleriyle iletişim kurmasını sağlayan bir sosyal medya platformudur. Chatirdek, kullanıcıların birbirleriyle mesajlaşmasını, arkadaşlık isteği göndermesini ve gruplar oluşturmasını sağlar."
 }
