feat(setting-service): added profile update service

--- a/client/src/constants/localization/en.json
+++ b/client/src/constants/localization/en.json
@@ -43,6 +43,8 @@
   "global.confirm": "Confirm",
   "global.yes": "Yes",
   "global.no": "No",
+  "global.empty": "Empty",
+  "global.writeAbout": "Write about yourself",
 
   "alert.success": "Success",
   "alert.error": "Error",
