feat(group-service): added group service and message service, also cleaned unnecessary codes

--- a/client/src/constants/localization/en.json
+++ b/client/src/constants/localization/en.json
@@ -14,7 +14,7 @@
   "global.send": "Send",
   "global.ok": "OK",
   "global.search": "Search",
-  "global.you": "You",
+  "global.you": "you",
   "global.writeMessage": "Type your message",
   "global.next": "Next",
   "global.previous": "Previous",
@@ -45,6 +45,8 @@
   "global.no": "No",
   "global.empty": "Empty",
   "global.writeAbout": "Write about yourself",
+  "global.outsideOwner": "Outside Admin",
+  "global.admin": "admin",
 
   "alert.success": "Success",
   "alert.error": "Error",
@@ -61,10 +63,19 @@
   "alert.minCharacter": "It must be at least {{length}} characters long.",
   "alert.maxCharacter": "It must be at most {{length}} characters long.",
   "alert.sendOnlyFriendMessage": "You can only send messages to your friends.",
+  "alert.sendOnlyGroupMessage": "Only group members can send messages.",
+  "alert.enterGroupName": "Please enter group name.",
+  "alert.selectMembers": "Please select friends to add to the group.",
 
   "toast.enterGroupName": "Please enter group name.",
   "toast.selectMembers": "Please select friends to add to the group.",
-  "toast.memberAdded": "Members added successfully.",
+  "toast.memberAdded": "{{length}} added successfully.",
+  "toast.memberRemoved": "{{name}} removed from the group.",
+  "toast.leftGroup": "You left the {{name}} group.",
+  "toast.groupCreated": "Group created successfully.",
+  "toast.invalidGroupName": "Only letters and numbers are allowed in the group name.",
+  "toast.groupDeleted": "Group deleted successfully.",
+  "toast.makeAdmin": "{{name}} is now an admin.",
 
   "error.register": "There is an account registered with the same email address or username.",
   "error.forgotPassword": "No registered account was found with this email address. Please check your email address.",
@@ -102,6 +113,8 @@
   "discover.discover.noUser": "No user found.",
 
   "group.group.header": "Groups",
+  "group.group.noGroup": "You have no groups yet.",
+  "group.group.noMessage": "No messages yet.",
   "group.createGroupBottomSheet.header": "New Group",
   "group.createGroupBottomSheet.placeholder": "Enter group name",
   "group.createGroupBottomSheet.selectMembers": "Select Members",
