--- a/client/src/constants/localization/tr.json
+++ b/client/src/constants/localization/tr.json
@@ -14,7 +14,7 @@
   "global.send": "Gönder",
   "global.ok": "Tamam",
   "global.search": "Ara",
-  "global.you": "Siz",
+  "global.you": "siz",
   "global.writeMessage": "Mesajınızı Yazın",
   "global.next": "İleri",
   "global.previous": "Geri",
@@ -45,6 +45,8 @@
   "global.no": "Hayır",
   "global.empty": "Boş",
   "global.writeAbout": "Hakkında yaz...",
+  "global.outsideOwner": "Yönetici Dışında",
+  "global.admin": "yönetici",
 
   "alert.success": "Başarılı",
   "alert.error": "Hata",
@@ -61,10 +63,19 @@
   "alert.minCharacter": "En az {{length}} karakter olmalıdır.",
   "alert.maxCharacter": "En fazla {{length}} karakter olmalıdır.",
   "alert.sendOnlyFriendMessage": "Sadece arkadaşlarınıza mesaj gönderebilirsiniz.",
+  "alert.sendOnlyGroupMessage": "Yalnızca grup üyeleri mesaj gönderebilir.",
+  "alert.enterGroupName": "Lütfen grup adını giriniz.",
+  "alert.selectMembers": "Lütfen en az bir üye seçiniz.",
 
   "toast.enterGroupName": "Lütfen grup adını giriniz.",
   "toast.selectMembers": "Lütfen en az bir üye seçiniz.",
-  "toast.memberAdded": "Üyeler eklendi.",
+  "toast.memberAdded": "{{length}} üye eklendi.",
+  "toast.memberRemoved": "{{name}} gruptan çıkarıldı.",
+  "toast.leftGroup": "{{name}} grubundan ayrıldınız.",
+  "toast.groupCreated": "Grup başarıyla oluşturuldu.",
+  "toast.invalidGroupName": "Grup adında yalnızca harflere ve sayılara izin verilir.",
+  "toast.groupDeleted": "Grup başarıyla silindi.",
+  "toast.makeAdmin": "{{name}} yönetici yapıldı.",
 
   "error.register": "Aynı e-posta adresi veya kullanıcı adı ile kayıtlı bir hesap bulunmaktadır.",
   "error.forgotPassword": "Bu e-posta adresi ile kayıtlı bir hesap bulunamadı. Lütfen e-posta adresinizi kontrol edin.",
@@ -102,6 +113,8 @@
   "discover.discover.noUser": "Henüz kullanıcı yok.",
 
   "group.group.header": "Gruplar",
+  "group.group.noGroup": "Henüz grup yok.",
+  "group.group.noMessage": "Henüz mesaj yok.",
   "group.createGroupBottomSheet.header": "Yeni Grup",
   "group.createGroupBottomSheet.placeholder": "Grup Adı",
   "group.createGroupBottomSheet.selectMembers": "Üyeleri Seç",
