--- a/client/src/constants/localization/en.json
+++ b/client/src/constants/localization/en.json
@@ -19,6 +19,7 @@
   "global.next": "Next",
   "global.previous": "Previous",
   "global.accept": "Accept",
+  "global.undo": "Undo",
   "global.addFriend": "Add Friend",
   "global.waiting": "Waiting",
   "global.createdAt": "Created At",
@@ -112,7 +113,8 @@
 
   "discover.discover.header": "Discover",
   "discover.discover.message": "You can discover new people here and connect with them",
-  "discover.requestBoxBottomSheet.noRequest": "You have no friend requests at the moment😊",
+  "discover.requestBoxBottomSheet.noIncomingRequest": "You have no friend requests at the moment.",
+  "discover.requestBoxBottomSheet.noOutgoingRequest": "You haven't sent a friend request yet.",
   "discover.discover.noUser": "No user found.",
 
   "group.group.header": "Groups",
