feat(modal): added 'clear chat history modal'

--- a/client/src/constants/localization/en.json
+++ b/client/src/constants/localization/en.json
@@ -50,6 +50,8 @@
   "global.admin": "admin",
   "global.typing": "Typing...",
   "global.online": "Online",
+  "global.offline": "Offline",
+  "global.clear": "Clear",
 
   "alert.success": "Success",
   "alert.error": "Error",
@@ -149,7 +151,7 @@
   "settings.chatsBottomSheet.Large": "Large",
   "settings.chatsBottomSheet.WallpaperColor": "Wallpaper Color",
   "settings.chatsBottomSheet.ClearChatHistory": "Clear Chat History",
-  "settings.chatsBottomSheet.ClearChatHistoryModal.header": "Are you sure you want to clear chat history?",
+  "settings.chatsBottomSheet.ClearChatHistoryModal.header": "Clear chat history",
   "settings.privacyBottomSheet.header": "Privacy Settings",
   "settings.privacyBottomSheet.content1": "Online Status Hide",
   "settings.privacyBottomSheet.content2": "Profile Picture Hide",
