--- a/client/src/constants/localization/tr.json
+++ b/client/src/constants/localization/tr.json
@@ -56,6 +56,8 @@
   "alert.success": "Başarılı",
   "alert.error": "Hata",
   "alert.fillAllFields": "Lütfen tüm alanları doldurunuz.",
+  "alert.invalidFullName": "Geçersiz ad soyad.",
+  "alert.invalidUsername": "Geçersiz kullanıcı adı.",
   "alert.passwordsDoNotMatch": "Parolalar uyuşmuyor.",
   "alert.invalidEmail": "Geçersiz e-posta adresi.",
   "alert.passwordLength": "Şifre en az {{length}} karakter uzunluğunda olmalı.",
@@ -115,6 +117,9 @@
 
   "discover.discover.header": "Keşfet",
   "discover.discover.message": "Burada yeni insanlar keşfedebilir ve onlarla bağlantı kurabilirsiniz",
+  "discover.discover.searchPlaceholder": "Kullanıcı Ara",
+  "discover.discover.incomingRequest": "Gelen İstekler",
+  "discover.discover.outgoingRequest": "Giden İstekler",
   "discover.requestBoxBottomSheet.noIncomingRequest": "Şu anda hiç arkadaşlık isteğin yok.",
   "discover.requestBoxBottomSheet.noOutgoingRequest": "Şu anda hiç arkadaşlık isteği göndermedin.",
   "discover.discover.noUser": "Henüz kullanıcı yok.",
