feat(crypto-js): added encryption for server side and updated client side

--- a/client/src/constants/localization/en.json
+++ b/client/src/constants/localization/en.json
@@ -53,6 +53,8 @@
   "global.offline": "Offline",
   "global.clear": "Clear",
   "global.recording": "Recording...",
+  "global.play": "Play",
+  "global.delete": "Delete",
 
   "alert.success": "Success",
   "alert.error": "Error",
